# simplegrad

./: .gitignore  CMakeLists.txt  MANIFEST.in  MANIFEST.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  wheels.yml
py-simplegrad/: main.py  setup.py
py-simplegrad/simplegrad/: __init__.py  main.py
py-simplegrad/simplegrad-dev/: __init__.py  simplegrad.pyi
py-simplegrad/simplegrad/module/: __init__.py
py-simplegrad/tests/: test_node_hypothesis.py  test_node_unit.py  test_space_unit.py
simplegrad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src-simplegrad/: simplegrad.cpp
src-simplegrad/include/: mlp.h  net.h  node.h  space.h
src-simplegrad/src/: mlp.cpp  net.cpp  node.cpp  space.cpp
