[build-system]
requires = ["setuptools>=64", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegrad"
version = "0.1.0"
description = "Automatic differentiation library for basic arithmetic operations"
readme = "MANIFEST.md"
authors = [{ name = "Deniz" }]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/deniztemur00/simplegrad"
Source = "https://github.com/deniztemur00/simplegrad"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *musllinux*"
test-command = 'python -c "from simplegrad import Node, MLP; a = Node(2.0); b = Node(3.0); c = a * b; c.backward(); assert abs(a.grad() - 3.0) < 1e-6"'

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
